k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-frontend-service
  namespace: exam
spec:
  selector:
    app: myapp-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-frontend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-frontend
  template:
    metadata:
      labels:
        app: myapp-frontend
    spec:
      containers:
        - name: myapp-frontend
          image: aharoud/myapp-frontend:3.0.0
          ports:
            - containerPort: 80
              name: http-port
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "128Mi"
              cpu: "50m"
